--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -56,14 +56,20 @@
     background-color: #2f3e51;
 }
 
+.groupStyle{
+    text-decoration: none;
+}
+
 .group_list{
     padding: 20px 0 40px;
     
-    &__name{
+    &__name{  
+        color: #fafafa;
         font-size: 15px;
     }
 
     &__messege{
+        color: #fafafa;
         font-size: 11px;
         margin-top: 5px;
     }
@@ -103,7 +109,10 @@
 .userName{
     color: #999999;
     font-size: 12px;
+    display: flex;
 }
+
+.names{margin-right: 5px;}
 
 .edit_button{
     width: 72px;
@@ -125,8 +134,23 @@
         background-color: #fafafa;
 }
 
-.messegeZone{
-    padding: 35px 0 46px 40px;
+.MessageBox{
+    margin-bottom: 46px;
+}
+
+.messageZone{
+    margin-top: 12px;
+    padding: 35px 40px 0;
+    height: calc(100vh - 100px - 90px); 
+}
+
+.content{
+    color: #434a54;
+    font-size: 14px;
+}
+
+.image{
+    height: 300px;
 }
 
 .chatUser{
@@ -137,6 +161,7 @@
 .nameLine{
     color: #333333;
     font-size: 16px;
+    font-weight: bold;
 }
 
 .timeLine{
@@ -144,36 +169,47 @@
     font-size: 12px;
     margin-left: 10px;
 }
-    
+
 .bottom_bar{
         height: 90px;
         background-color: #d2d2d2;
         display: flex;
         align-items: center;
+        padding: 20px 50px 20px 40px;
 }
 
 .post_zone{
-    margin: 10px 15px 10px 40px;
     display: flex;
-    background-color: #fafafa;
-    height: 50px;
+    justify-content: space-between;
     width: 100%;
 
 }
 
-.type_zone{border: none;
+.type_Zone{
+    display: flex;
+    border: none;
     height: 50px;
     width: 100%;
-    padding: 0 45px 0 15px;}
+    position: relative;
+}
+
+.textField{
+    padding: 0 45px 0 15px;
+    height: 50px;
+    width: 100%;
+}
 
 .image_attachment{
+    height: 50px;
     padding: 0 10px 0 10px;
     display: flex;
     align-items: center;
+    position: absolute;
+    right: 10px;
 }
 
 
-.tet{
+.Hidden{
     display: none;
 }
 
@@ -185,6 +221,5 @@
     font-size: 16px;
     height: 50px;
     padding: 0 30px;
-    margin-right: 40px;
-
+    margin-left: 15px;
 }
