--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,7 +5,7 @@
         = current_user.name
       .icons
         .icon1
-          =link_to "#", class: 'icon_1st'  do
+          =link_to new_group_path, class: 'icon_1st'  do
             = icon('fas','edit')
         .icon2
           =link_to edit_user_path(current_user), class: 'icon_2nd' do
@@ -13,9 +13,11 @@
             = icon('fas','cog')
             
   .main
-    .right
-      .group_list
-        .group_list__name
-          teckcamp
-        .group_list__messege
-          メッセージはまだありません
+    .Groups
+      - current_user.groups.each do |group|
+        .group_list
+          = link_to group_messages_path(group),class: "groupStyle" do
+            .group_list__name 
+              = group.name
+            .group_list__messege
+              = group.show_last_message
