非同期通信の実装です。

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -132,6 +132,8 @@
 .chat_bar{
         height: calc(100vh - 190px);
         background-color: #fafafa;
+        overflow: scroll;
+
 }
 
 .MessageBox{
